--- a/public/invoices/facture_001_16.html
+++ b/public/invoices/facture_001_16.html
@@ -33,8 +33,8 @@
                     <div class="header">
                         <h1>FACTURE</h1>
                         <h2>N° 001</h2>
-                        <div class="status status-Éditée">
-                            Statut: Éditée
+                        <div class="status status-payée">
+                            Statut: Payée
                         </div>
                     </div>
 
@@ -47,7 +47,7 @@
                             </div>
                             <div class="info-row">
                                 <span class="label">Email:</span>
-                                alice@example.com
+                                alice@mail.com
                             </div>
                             <div class="info-row">
                                 <span class="label">Projet:</span>
@@ -59,7 +59,7 @@
                             <h3>FACTURE</h3>
                             <div class="info-row">
                                 <span class="label">Date édition:</span>
-                                01/07/2025
+                                02/07/2025
                             </div>
                             <div class="info-row"><span class="label">Date paiement:</span>30/06/2025</div>
                             
@@ -95,7 +95,7 @@
                     </div>
 
                     <div class="footer">
-                        <p>Facture générée automatiquement le 01/07/2025 à 11:23</p>
+                        <p>Facture générée automatiquement le 02/07/2025 à 20:38</p>
                         <p>Fichier: facture_001_16.html</p>
                     </div>
                 </div>
