--- a/public/invoices/facture_002_22.html
+++ b/public/invoices/facture_002_22.html
@@ -3,7 +3,7 @@
             <head>
                 <meta charset="UTF-8">
                 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                <title>Facture 001</title>
+                <title>Facture 002</title>
                 <style>
                     body { font-family: Arial, sans-serif; max-width: 800px; margin: 0 auto; padding: 20px; background: #f5f5f5; }
                     .invoice { background: white; padding: 30px; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
@@ -32,9 +32,9 @@
                 <div class="invoice">
                     <div class="header">
                         <h1>FACTURE</h1>
-                        <h2>N° 001</h2>
-                        <div class="status status-payée">
-                            Statut: Payée
+                        <h2>N° 002</h2>
+                        <div class="status status-Éditée">
+                            Statut: Éditée
                         </div>
                     </div>
 
@@ -61,7 +61,7 @@
                                 <span class="label">Date édition:</span>
                                 02/07/2025
                             </div>
-                            <div class="info-row"><span class="label">Date paiement:</span>30/06/2025</div>
+                            <div class="info-row"><span class="label">Date paiement:</span>12/09/2025</div>
                             
                         </div>
                     </div>
@@ -90,8 +90,8 @@
                     </div>
 
                     <div class="footer">
-                        <p>Facture générée automatiquement le 02/07/2025 à 19:55</p>
-                        <p>Fichier: facture_001_8.html</p>
+                        <p>Facture générée automatiquement le 02/07/2025 à 19:54</p>
+                        <p>Fichier: facture_002_22.html</p>
                     </div>
                 </div>
             </body>
