--- a/public/invoices/facture_001_19.html
+++ b/public/invoices/facture_001_19.html
@@ -33,8 +33,8 @@
                     <div class="header">
                         <h1>FACTURE</h1>
                         <h2>N° 001</h2>
-                        <div class="status status-payée">
-                            Statut: Payée
+                        <div class="status status-envoyée">
+                            Statut: Envoyée
                         </div>
                     </div>
 
@@ -43,15 +43,15 @@
                             <h3>CLIENT</h3>
                             <div class="info-row">
                                 <span class="label">Nom:</span>
-                                Clara Leroy
+                                Bob Martin
                             </div>
                             <div class="info-row">
                                 <span class="label">Email:</span>
-                                clara@example.com
+                                bob@example.com
                             </div>
                             <div class="info-row">
                                 <span class="label">Projet:</span>
-                                Projet Epsilon
+                                Projet Gamma
                             </div>
                         </div>
 
@@ -61,7 +61,7 @@
                                 <span class="label">Date édition:</span>
                                 02/07/2025
                             </div>
-                            <div class="info-row"><span class="label">Date paiement:</span>30/06/2025</div>
+                            <div class="info-row"><span class="label">Date paiement:</span>23/08/2025</div>
                             
                         </div>
                     </div>
@@ -76,22 +76,27 @@
                             </tr>
                         </thead>
                         <tbody><tr>
-                    <td>Application mobile</td>
-                    <td>600.00 €</td>
-                    <td>1</td>
-                    <td>600.00 €</td>
+                    <td>Aspirateur</td>
+                    <td>50.00 €</td>
+                    <td>3</td>
+                    <td>150.00 €</td>
+                </tr><tr>
+                    <td>poussières</td>
+                    <td>150.00 €</td>
+                    <td>2</td>
+                    <td>300.00 €</td>
                 </tr></tbody>
                     </table>
 
                     <div class="total-section">
-                        <div class="total-row">Sous-total: 600.00 €</div>
-                        <div class="total-row">TVA (20%): 120.00 €</div>
-                        <div class="total-row final-total">TOTAL TTC: 720.00 €</div>
+                        <div class="total-row">Sous-total: 450.00 €</div>
+                        <div class="total-row">TVA (20%): 90.00 €</div>
+                        <div class="total-row final-total">TOTAL TTC: 540.00 €</div>
                     </div>
 
                     <div class="footer">
-                        <p>Facture générée automatiquement le 02/07/2025 à 19:55</p>
-                        <p>Fichier: facture_001_8.html</p>
+                        <p>Facture générée automatiquement le 02/07/2025 à 19:54</p>
+                        <p>Fichier: facture_001_19.html</p>
                     </div>
                 </div>
             </body>
