--- a/public/invoices/facture_003_23.html
+++ b/public/invoices/facture_003_23.html
@@ -3,7 +3,7 @@
             <head>
                 <meta charset="UTF-8">
                 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                <title>Facture 001</title>
+                <title>Facture 003</title>
                 <style>
                     body { font-family: Arial, sans-serif; max-width: 800px; margin: 0 auto; padding: 20px; background: #f5f5f5; }
                     .invoice { background: white; padding: 30px; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
@@ -32,9 +32,9 @@
                 <div class="invoice">
                     <div class="header">
                         <h1>FACTURE</h1>
-                        <h2>N° 001</h2>
-                        <div class="status status-pending">
-                            Statut: En attente
+                        <h2>N° 003</h2>
+                        <div class="status status-Éditée">
+                            Statut: Éditée
                         </div>
                     </div>
 
@@ -43,15 +43,15 @@
                             <h3>CLIENT</h3>
                             <div class="info-row">
                                 <span class="label">Nom:</span>
-                                Bob Martin
+                                Clara Leroy
                             </div>
                             <div class="info-row">
                                 <span class="label">Email:</span>
-                                bob@example.com
+                                clara@example.com
                             </div>
                             <div class="info-row">
                                 <span class="label">Projet:</span>
-                                Projet Gamma
+                                Projet Epsilon
                             </div>
                         </div>
 
@@ -59,9 +59,9 @@
                             <h3>FACTURE</h3>
                             <div class="info-row">
                                 <span class="label">Date édition:</span>
-                                01/07/2025
+                                02/07/2025
                             </div>
-                            <div class="info-row"><span class="label">Date paiement:</span>01/07/2025</div>
+                            <div class="info-row"><span class="label">Date paiement:</span>22/08/2025</div>
                             
                         </div>
                     </div>
@@ -76,27 +76,27 @@
                             </tr>
                         </thead>
                         <tbody><tr>
-                    <td>Aspirateur</td>
-                    <td>50.00 €</td>
-                    <td>3</td>
-                    <td>150.00 €</td>
+                    <td>Clime</td>
+                    <td>500.00 €</td>
+                    <td>1</td>
+                    <td>500.00 €</td>
                 </tr><tr>
-                    <td>poussières</td>
-                    <td>150.00 €</td>
+                    <td>Réparation</td>
+                    <td>100.00 €</td>
                     <td>2</td>
-                    <td>300.00 €</td>
+                    <td>200.00 €</td>
                 </tr></tbody>
                     </table>
 
                     <div class="total-section">
-                        <div class="total-row">Sous-total: 450.00 €</div>
-                        <div class="total-row">TVA (20%): 90.00 €</div>
-                        <div class="total-row final-total">TOTAL TTC: 540.00 €</div>
+                        <div class="total-row">Sous-total: 700.00 €</div>
+                        <div class="total-row">TVA (20%): 140.00 €</div>
+                        <div class="total-row final-total">TOTAL TTC: 840.00 €</div>
                     </div>
 
                     <div class="footer">
-                        <p>Facture générée automatiquement le 01/07/2025 à 12:38</p>
-                        <p>Fichier: facture_001_18.html</p>
+                        <p>Facture générée automatiquement le 02/07/2025 à 20:36</p>
+                        <p>Fichier: facture_003_23.html</p>
                     </div>
                 </div>
             </body>
